--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "scripts": {
-    "start": "nodemon server.js"
-  },
-  "dependencies": {
-    "@supabase/supabase-js": "^2.55.0",
-    "bcrypt": "^6.0.0",
-    "cookie-parser": "^1.4.7",
-    "dotenv": "^17.2.2",
-    "ejs": "^3.1.10",
-    "express": "^4.21.2",
-    "express-session": "^1.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.2",
-    "nodemailer": "^7.0.10",
-    "nodemon": "^3.1.9"
-  }
+    "scripts": {
+        "start": "node server.js",
+        "dev": "nodemon server.js"
+    },
+    "dependencies": {
+        "@supabase/supabase-js": "^2.55.0",
+        "bcrypt": "^6.0.0",
+        "cookie-parser": "^1.4.7",
+        "dotenv": "^17.2.2",
+        "ejs": "^3.1.10",
+        "express": "^4.21.2",
+        "express-session": "^1.18.2",
+        "jsonwebtoken": "^9.0.2",
+        "multer": "^2.0.2",
+        "nodemailer": "^7.0.10",
+        "nodemon": "^3.1.9"
+    }
 }
