--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     },
     "dependencies": {
         "@supabase/supabase-js": "^2.55.0",
+        "axios": "^1.13.0",
         "bcrypt": "^6.0.0",
         "cookie-parser": "^1.4.7",
         "dotenv": "^17.2.2",
@@ -14,6 +15,6 @@
         "jsonwebtoken": "^9.0.2",
         "multer": "^2.0.2",
         "nodemailer": "^7.0.10",
-        "nodemon": "^3.1.9"
+        "nodemon": "^3.1.10"
     }
 }
